# IraDanceva_YMP_1

./: CMakeLists.txt
src/containers/: forward_list.cpp  forward_list.hpp
src/tasks/: first.cpp  first.hpp
tests/: basic.cpp  first_task.cpp
